# RK3588_FPV_Master

./: .gitignore  CMakeLists.txt  build.sh  readme.md
core/inc/: fpv_serial.hpp  main.hpp  rknpu_yolo.hpp  usart.hpp  vision.hpp
core/src/: fpv_serial.cpp  main.cpp  main.cpp.save  rknpu_yolo.cpp  usart.cpp  vision.cpp
model/: coco_80_labels_list.txt
settings/: cameraL_paramets.json  cameraRL_RTEF.json  cameraR_paramets.json  camera_paramets.json
tools/: camera_cali.cpp  deep_map.cpp  system_status.sh  watch.sh
